# project-2_Baikov_Maksim_M25-555

./: .gitignore  Makefile  README.md  db_meta.json  fix_toml.py  pyproject.toml
data/: books.json  students.json
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
