[tool.poetry]
name = "project#2-baikov-maksim-m25-555"
version = "0.1.0"
description = ""
authors = ["lYoungunl <max10129595@mail.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.13"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.engine:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"